refactor to php namespace

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <p>
             Beispiel:<br>
-            <code>http://www.youtube.com/watch?v=<span class="text-success">3vq9p00T08I</span></code>
+            <code>https://www.youtube.com/watch?v=<span class="text-success">3vq9p00T08I</span></code>
         </p>
 
         <form id="FormBuild" action="info.php" method="post">
