add vimeo service, extends http interface

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Youtube Download Video</h1>
-        <p>Hier kannst Du Dir Youtube-Videos Lokal auf Deine Festplatte laden!</p>
+        <p>Hier kannst Du Dir Youtube/Vimeo Videos Lokal auf Deine Festplatte laden!</p>
     </div>
 </div>
 
@@ -27,7 +27,8 @@
 
         <p>
             Beispiel:<br>
-            <code>https://www.youtube.com/watch?v=Rd7YsqomnGI</code>
+            <code>https://www.youtube.com/watch?v=Rd7YsqomnGI</code><br>
+            <code>https://vimeo.com/30857968</code>
         </p>
 
         <form id="FormBuild" action="info.php" method="post">
