update frontend url, add another test

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="ContainerBuild">
         <p>
             Beispiel:<br>
-            <code>https://www.youtube.com/watch?v=Rd7YsqomnGI</code><br>
+            <code>https://www.youtube.com/watch?v=GX2m2eWbwOw</code><br>
             <code>https://vimeo.com/30857968</code>
         </p>
 
